--- a/DarkMode.css
+++ b/DarkMode.css
@@ -21,6 +21,8 @@ ul {
 
 li {
     float: left;
+/* Add a gray right border to all list items, except the last item (last-child) */
+    border-right: 1px solid #bbb;
 }
 
 li a {
@@ -39,6 +41,10 @@ li a:hover {
 li.active {
     background-color: orange;
   }
+
+li:last-child {
+    border-right: none;
+} 
 
 footer {
     background-color: purple;
