--- a/DarkMode.css
+++ b/DarkMode.css
@@ -7,16 +7,16 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-div.navbar {
-    background-color: purple;
-    position: fixed
-}
-
 ul {
+    background-color: purple;
     list-style-type: none;
     margin: 0;
     padding: 0;
     overflow: hidden;
+    width: 100%;
+    position: -webkit-sticky; /* Safari */
+    position: sticky;
+    top: 0;
 }
 
 li {
