--- a/DarkMode.css
+++ b/DarkMode.css
@@ -1,6 +1,6 @@
 /*This CSS document was written in VS Code!*/
 body {
-    background-color: black;
+    background-color: rgb(14, 22, 22);
     color: lightgray;
     text-align: center;
     margin: 10%;
@@ -53,4 +53,16 @@ footer {
 p {
     text-align: left;
     text-indent: 5%;
+}
+
+h1.center {
+    text-align: center;
+}
+
+h3.center {
+    text-align: center;
+}
+
+p.center {
+    text-align: center;
 }
